--- a/nutritec/src/pages/styles.css
+++ b/nutritec/src/pages/styles.css
@@ -60,10 +60,75 @@ font-size: 1.25rem;
 .p-4 {
 padding: 1rem;
 }
-/*nav bar*/
+/* Nav bar */
+.nav-bar {
+  background-color: #000;
+  padding: 1rem;
+  border-radius: 0;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  transition: background-color 0.3s ease; /* Añadir transición */
+}
 
-.navbar-nav .btn-primary {
-margin-right: 10px; /* Ajusta el espacio entre el botón y los otros elementos de la barra de navegación */
+.navbar-brand h1 {
+  margin: 0;
+  font-size: 2.5rem;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  color: #fff;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+  transition: all 0.3s ease;
+}
+
+.navbar-brand:hover h1 {
+  transform: rotate(-5deg) scale(1.1);
+}
+
+.nav-item {
+  margin: 0 1rem; /* Uniformar los márgenes */
+}
+
+.nav-link {
+  color: #fff !important;
+  font-weight: bold;
+  font-size: 1.2rem;
+  transition: all 0.3s ease;
+  position: relative;
+}
+
+.nav-link::before {
+  content: '';
+  position: absolute;
+  bottom: -3px;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background-color: transparent;
+  transition: background-color 0.3s ease;
+}
+
+.nav-link:hover::before {
+  background-color: #7AC534;
+}
+
+.nav-link:hover {
+  color: #7AC534 !important;
+  transform: translateY(-3px);
+}
+
+.nav-item.dropdown .dropdown-menu {
+  background-color: #000;
+  border: none;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Agregar efecto de sombra */
+}
+
+.dropdown-item {
+  color: #fff !important;
+  font-size: 1rem;
+  transition: all 0.3s ease;
+}
+
+.dropdown-item:hover {
+  background-color: #7AC534;
+  color: black !important;
 }
 
 /* */
@@ -84,6 +149,125 @@ color: #333;
 .service-item p {
 color: #666;
 }
+/*movil*/
+.card {
+  border-radius: 20px;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
+  max-width: 540px;
+  margin: auto; 
+  overflow: hidden;
+  position: relative;
+  background: linear-gradient(45deg, #FF6B6B, #5566FF);
+  color: #fff;
+  display: flex;
+  flex-direction: column;
+  justify-content: center; /* Centra verticalmente */
+  align-items: center; 
+}
+
+.card:hover {
+  transform: translateY(-5px);
+}
+
+.card::before {
+  content: '';
+  position: absolute;
+  top: -20px;
+  left: -20px;
+  right: -20px;
+  bottom: -20px;
+  background: rgba(255, 255, 255, 0.1);
+  backdrop-filter: blur(10px);
+  z-index: -1;
+  border-radius: 20px;
+}
+
+.card-body {
+  text-align: center;
+}
+
+.card-title {
+  font-size: 2rem;
+  margin-bottom: 10px;
+}
+
+.card-text {
+  font-size: 1.2rem;
+  margin-bottom: 20px;
+}
+
+.text-body-secondary {
+  font-size: 1rem;
+}
+/* Estilos adicionales para el formulario del usuario */
+
+.user-container {
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 40px;
+  background-color: #f9f9f9;
+  border-radius: 10px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.user-title {
+  font-size: 2rem;
+  color: #333333;
+  margin-bottom: 30px;
+}
+
+.user-form {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+.user-avatar {
+  margin-bottom: 20px;
+}
+
+.avatar-label {
+  cursor: pointer;
+}
+
+.avatar-img {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+.avatar-input {
+  display: none;
+}
+
+.user-info {
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 20px;
+}
+
+.form-group {
+  margin-bottom: 20px;
+}
+
+.form-input {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #dddddd;
+  border-radius: 5px;
+  font-size: 1rem;
+  transition: border-color 0.3s ease;
+}
+
+.form-input:focus {
+  outline: none;
+  border-color: #007bff;}
+
 
 
 
