--- a/nutritec/src/pages/styles.css
+++ b/nutritec/src/pages/styles.css
@@ -266,7 +266,48 @@ color: #666;
 
 .form-input:focus {
   outline: none;
-  border-color: #007bff;}
+  border-color: #007bff;
+}
+
+  
+
+/*---LOGIN---*/
+.logo {
+  margin-top: 5rem;
+}
+
+.slogan {
+  color: #FFF;
+  font-size: 2.5rem;
+  margin-top: 5rem;
+  background: linear-gradient(to top, rgba(255, 255, 250, 0), #000000);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-weight: bold;
+}
+
+.login-form {
+  border-left: 1px solid #000;
+  padding: 2rem;
+  background: #fff;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.login-form input[type="email"],
+.login-form input[type="password"] {
+  border-radius: 5px;
+}
+
+.btn-primary {
+  background-color: green;
+  border-color: green;
+}
+
+.btn-primary:hover {
+  background-color: #0a671a;
+  border-color: #0a671a;
+}
 
 
 
