--- a/nutritec/src/pages/styles.css
+++ b/nutritec/src/pages/styles.css
@@ -308,6 +308,60 @@ color: #666;
   background-color: #0a671a;
   border-color: #0a671a;
 }
+/*FORMULARIO INICIO*/
+
+.formulario-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-color: #3b5998; /* Azul de Facebook */
+}
+
+.formulario {
+  width: 400px;
+  padding: 40px;
+  border-radius: 10px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
+  background-color: #fff;
+  text-align: center;
+}
+
+.titulo {
+  color: #1b5c29; /* Azul de Facebook */
+  font-size: 35px;
+  margin-bottom: 20px;
+}
+
+.form-row {
+  margin-bottom: 20px;
+}
+
+.form-group {
+  margin-bottom: 15px;
+}
+
+.form-control {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  outline: none;
+}
+
+.btn-primary {
+  padding: 12px;
+  border: none;
+  border-radius: 5px;
+  background-color: #3b5998; /* Azul de Facebook */
+  color: #fff;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.btn-primary:hover {
+  background-color: #2d4373; /* Azul más oscuro */
+}
 
 
 
