--- a/nutritec/src/pages/estiloIA.css
+++ b/nutritec/src/pages/estiloIA.css
@@ -3,7 +3,7 @@
 /* Estilos generales */
 body {
     background-color: #ffffff; /* Fondo oscuro */
-    color: #ffffff; /* Texto blanco */
+    color: #000000; /* Texto blanco */
     font-family: 'Arial', sans-serif;
     margin: 0; /* Elimina el margen por defecto del body */
     padding: 0; /* Elimina el padding por defecto del body */
