--- a/nutri/nutriVite/src/App.css
+++ b/nutri/nutriVite/src/App.css
@@ -12,7 +12,7 @@
     background: #ffffff;
     padding: 30px;
     border-radius: 20px;
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 10px 20px rgb(0, 0, 0);
     transition: transform 0.3s ease, box-shadow 0.3s ease;
     display: flex;
     flex-direction: column;
@@ -21,7 +21,7 @@
 
 .option-card:hover {
     transform: translateY(-5px);
-    box-shadow: 0 15px 25px rgba(0, 0, 0, 0.15);
+    box-shadow: 0 15px 25px rgba(105, 3, 3, 0.15);
 }
 
 .option-title {
